--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -7,6 +7,21 @@ body {
     font-family: 'Jost', sans-serif;
 }
 
+
+*::-webkit-scrollbar {
+    width: 12px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #000;
+    border-radius: 20px;
+    border: 3px solid white;
+}
+
+*::-webkit-scrollbar-track {
+    background: white;
+}
+
 /* LAYOUT */
 .my-container {
     width: 100%;
