--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -13,13 +13,13 @@ body {
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: #000;
+    background-color: #fff;
     border-radius: 20px;
-    border: 3px solid white;
+    border: 3px solid #000;
 }
 
 *::-webkit-scrollbar-track {
-    background: white;
+    background: #000;
 }
 
 /* LAYOUT */
