--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -8,17 +8,17 @@ body {
 }
 
 
-*::-webkit-scrollbar {
+body::-webkit-scrollbar {
     width: 12px;
 }
 
-*::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
     background-color: #fff;
     border-radius: 20px;
     border: 3px solid #000;
 }
 
-*::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
     background: #000;
 }
 
