repair responsive home page

--- a/public/assets/css/pages/home.css
+++ b/public/assets/css/pages/home.css
@@ -60,8 +60,8 @@
 }
 
 .helm-wrapper {
-  width: 94%;
-  padding: 0em 0em 8em 10em;
+  width: 100%;
+  padding: 0 5em 3em 5em;
   margin-bottom: 4em;
 }
 
