--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -31,6 +31,25 @@ body::-webkit-scrollbar-track {
     width: 100%;
 }
 
+#upBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 20px;
+    border: none;
+    outline: none;
+    background-color: #000;
+    color: white;
+    cursor: pointer;
+    padding: 15px 20px;
+}
+  
+#upBtn:hover {
+    background-color: #555;
+}
+
 .promotion-bar {
     font-size: .9rem;
     width: 100%;
